--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.15",
+    "axios": "^0.23.0",
+    "qs": "^6.10.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-elements": "^3.4.2",
     "react-native-navigation": "^7.21.0",
+    "react-query": "^3.28.0",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
@@ -23,6 +26,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/qs": "^6.9.7",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
