--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.15",
-    "axios": "^0.23.0",
+    "graphql": "^15.7.0",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
