--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-native": "0.65.1",
     "react-native-elements": "^3.4.2",
     "react-native-navigation": "^7.21.0",
-    "react-native-responsive-screen": "^1.4.2",
     "react-query": "^3.28.0",
+    "rn-flexible": "^1.0.2",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
