--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "0.17.1",
     "react-query": "^3.28.0",
     "rn-flexible": "^1.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "use-timeout": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
