--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "graphql": "^15.7.0",
+    "lodash": "^4.17.21",
     "qs": "^6.10.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -24,8 +25,7 @@
     "react-native-web": "0.17.1",
     "react-query": "^3.28.0",
     "rn-flexible": "^1.0.2",
-    "styled-components": "^5.3.1",
-    "use-timeout": "^1.1.0"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
