--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/qs": "^6.9.7",
     "expo": "~43.0.2",
+    "expo-linking": "~2.4.2",
     "expo-status-bar": "~1.1.0",
     "graphql": "^15.7.0",
     "lodash": "^4.17.21",
@@ -20,8 +22,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-pager-view": "5.4.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-query": "^3.28.0",
     "rn-flexible": "^1.0.2",
