--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-query": "^3.28.0",
+    "recyclerlistview": "^3.0.5",
     "rn-flexible": "^1.0.2",
     "styled-components": "^5.3.1"
   },
