--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
+    "react-native-webview": "11.13.0",
     "react-query": "^3.28.0",
     "recyclerlistview": "^3.0.5",
     "rn-flexible": "^1.0.2",
